# ncs-knx-iot

./: .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig  Kconfig.defconfig  LICENSE  README.md  west.yml
.github/workflows/: codeql.yml  docbuild.yml  docpreview.yml  on_pr.yml
docs/: Doxyfile  conf.py  config.rst  custom.properties  index.rst  known_issues.rst  links.txt  requirements-doc.txt  setup.rst  shortcuts.txt  software_maturity.rst  tags.yml
docs/_doxygen/: main.md
docs/_extensions/: knx_iot_kconfig.py
docs/includes/: sample_board_rows.txt
docs/knx-iot/: addon.rst  samples.rst  setup.rst
docs/knx-iot/overview/: architecture.rst  commissioning.rst  device_model.rst  group_communication.rst  index.rst  network_topology.rst  security.rst
docs/knx-iot/samples/light_switch_actuator/: README.rst
docs/knx-iot/samples/light_switch_sensor/: README.rst
include/knx/: knx_app.h  knx_board.h  knx_device.h  knx_presets.h  knx_transport.h
samples/common/: knx.conf  knx_hardcoded.h  thread_hardcoded.conf
samples/light_switch_actuator/: CMakeLists.txt  Kconfig.sysbuild  README.rst  app.h  knx_actuator.c  main.c  prj.conf  sample.yaml
samples/light_switch_sensor/: CMakeLists.txt  README.rst  app.h  knx_sensor.c  main.c  prj.conf  sample.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/knx/: CMakeLists.txt  knx_app.c  knx_board.c  knx_presets.c  knx_priv.h  knx_resources.c  knx_stack.c  knx_transport.c
zephyr/: module.yml
